# Group27

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  requirements.txt  result.txt
onnxFile/googlenet-12-int8/test_data_set_0/: input_0.pb  output_0.pb
onnxFile/mnist-12/: mnist-12.txt  mnist-12_input.txt  mnist-12_output.txt
python/: build.sh  test.py
src/: error.rs  fileParser.rs  fileparser.rs  graph.rs  helper.rs  lib.rs  main.rs  operations.rs  parser.rs  protobufoperations.rs  protobufstruct.rs  pythonBinding.rs  python_binding.rs
src/fileParser/: fileParser.rs  protobufoperations.rs  protobufstruct.rs
src/fileparser/: fileparser.rs  protobufoperations.rs  protobufstruct.rs
src/graph/: initializer.rs  input.rs  intermediate.rs  operation.rs  output.rs
src/operations/: add.rs  averagepool.rs  concat.rs  constant.rs  conv.rs  div.rs  dropout.rs  gemm.rs  lrn.rs  matmul.rs  maxpool.rs  relu.rs  reshape.rs  softmax.rs
tests/: inference.rs  models.rs
