[package]
name = "onnx-rust"
authors = ["Andrea S.", "Alberto V."]
description = "Library and CLI tool written in Rust, made to parse models saved using the ONNX standard and perform inference with them."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
ndarray = { version = "0.15.6", features = ["matrixmultiply-threading"] }
ndarray_einsum_beta = "0.7.0"
prettytable = "0.10.0"
rayon = "1.7.0"
pyo3 = { version = "0.19.1", features = ["extension-module"] }
numpy = "0.19"
pyo3-log = "0.8.3"

[lib]
name = "onnx_rust"
crate-type = ["cdylib","lib"] 



